--- a/app/src/main/res/layout/skyscraper_add_goal.xml
+++ b/app/src/main/res/layout/skyscraper_add_goal.xml
@@ -17,136 +17,147 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="28dp"
+        android:padding="13dp"
+        tools:layout_editor_absoluteX="-87dp"
         tools:layout_editor_absoluteY="0dp">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" Beschrijving"
-            app:layout_constraintBottom_toTopOf="@+id/beschrijvingText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.048"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titelText"
-            app:layout_constraintVertical_bias="0.487" />
 
+        <TextView
+            android:id="@+id/lblTitleDoel"
+            android:layout_width="132dp"
+            android:layout_height="16dp"
+            android:layout_marginBottom="8dp"
+            android:textSize="15dp"
+            android:text="@string/title_goal"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/titleDoelText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.02"
+            app:layout_constraintStart_toStartOf="parent" />
         <EditText
-            android:id="@+id/titelText"
-            android:layout_width="378dp"
+            android:id="@+id/titleDoelText"
+            android:layout_width="376dp"
             android:layout_height="48dp"
             android:layout_marginTop="100dp"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="124dp"
-            android:layout_height="16dp"
-            android:layout_marginBottom="8dp"
-            android:text=" Titel van het doel"
-            app:layout_constraintBottom_toTopOf="@+id/titelText"
+            android:id="@+id/lblDescriptionDoel"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lbl_description_goal"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/beschrijvingText"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.055"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleDoelText"
+            app:layout_constraintVertical_bias="0.487" />
 
         <EditText
-            android:id="@+id/beschrijvingText"
+            android:id="@+id/descriptionDoelText"
             android:layout_width="376dp"
-            android:layout_height="40dp"
+            android:layout_height="70dp"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine|textImeMultiLine"
+            android:lines="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.457"
+
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titelText"
+            app:layout_constraintTop_toBottomOf="@+id/titleDoelText"
             app:layout_constraintVertical_bias="0.071" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/AddNewStap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
             android:layout_marginTop="12dp"
-            android:text="Voeg een stap toe:"
+            android:text="@string/add_a_step"
+            android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.063"
+            app:layout_constraintHorizontal_bias="0.02"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/beschrijvingText" />
+            app:layout_constraintTop_toBottomOf="@+id/descriptionDoelText" />
+
+        <EditText
+            android:id="@+id/stepText"
+            android:layout_width="305dp"
+            android:layout_height="41dp"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AddNewStap" />
+
+        <TextView
+            android:id="@+id/lblSteps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@android:color/black"
+            android:text="@string/lbl_list_goalsteps"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.048"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/stepText" />
 
         <LinearLayout
             android:id="@+id/stepList"
-            android:layout_width="359dp"
-            android:layout_height="207dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="52dp"
-            android:layout_marginEnd="15dp"
+            android:layout_width="370dp"
+            android:layout_height="190dp"
             android:orientation="vertical"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stepTekst" />
+            app:layout_constraintTop_toBottomOf="@+id/stepText" />
+
+        <Button
+            android:id="@+id/addStepButton"
+            android:layout_width="47dp"
+            android:layout_height="41dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="7dp"
+            android:text="+"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/stepText"
+            app:layout_constraintTop_toBottomOf="@+id/descriptionDoelText" />
+
+        <Button
+            android:id="@+id/annuleerButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:text="@string/annuleren"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/voegToeButton"
+            app:layout_constraintHorizontal_bias="0.475"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/voegToeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="68dp"
-            android:layout_marginBottom="32dp"
-            android:text="Voeg toe"
+            android:layout_marginBottom="14dp"
+            android:text="@string/add_new_goal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/annuleerButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:text="Annuleer"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/voegToeButton"
-            app:layout_constraintHorizontal_bias="0.475"
-            app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/stepTekst"
-            android:layout_width="325dp"
-            android:layout_height="41dp"
-            android:layout_marginTop="40dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.186"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/beschrijvingText" />
-
-        <Button
-            android:id="@+id/addStepButton"
-            android:layout_width="47dp"
-            android:layout_height="41dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="40dp"
-            android:text="+"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/stepTekst"
-            app:layout_constraintTop_toBottomOf="@+id/beschrijvingText" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text=" De stappen:"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.048"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stepTekst" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
