--- a/app/src/main/res/layout/skyscraper_goaldetails.xml
+++ b/app/src/main/res/layout/skyscraper_goaldetails.xml
@@ -27,8 +27,8 @@
             android:layout_height="0dp"
             android:clipToPadding="false"
             android:orientation="vertical"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
+            android:paddingStart="23dp"
+            android:paddingEnd="23dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,8 @@
                     tools:layout_conversion_absoluteHeight="19dp"
                     tools:layout_conversion_absoluteWidth="76dp"
                     tools:layout_editor_absoluteX="139dp"
-                    tools:layout_editor_absoluteY="166dp" />
+                    tools:layout_editor_absoluteY="166dp"
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/beschrijvingText"
@@ -93,11 +94,12 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/lbl_allStappen"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Alle stappen:"
+                    android:textColor="@android:color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                 <ScrollView
