--- a/app/src/main/res/layout/skyscraper_goalpostimage.xml
+++ b/app/src/main/res/layout/skyscraper_goalpostimage.xml
@@ -8,20 +8,23 @@
 
     <ImageView
         android:id="@+id/bellySkyscraper"
-        android:layout_width="435dp"
-        android:layout_height="151dp"
+        android:layout_width="410dp"
+        android:layout_height="139dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/belly_skyscraper" />
+        app:srcCompat="@drawable/belly_skyscraper1" />
 
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="6dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/bellySkyscraper"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +38,10 @@
             android:clickable="true"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:paddingLeft="7dp"
+            android:paddingTop="12dp"
+            android:paddingRight="7dp"
+            android:paddingBottom="12dp">
 
             <!-- Title, secondary and supporting text -->
             <TextView
@@ -44,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="DummyText"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textSize="16dp" />
             <!--<TextView
                     android:id="@+id/description"
                     android:layout_width="wrap_content"
